--- a/task-5/cart.html
+++ b/task-5/cart.html
@@ -45,7 +45,7 @@
         <div class="card mb-3 justify-content-center container ">
             <div class="row g-0  ">
               <div class="col-md-4 pt-4 text-center">
-                <img src="./assets/images/" class="img-fluid rounded-start" alt="...">
+                <img src="./assets/images/img-cat-card-1.jpg" class="img-fluid rounded-start" alt="...">
               </div>
               <div class="col-md-8">
                 <div class="card-body">
