--- a/task-5/account.html
+++ b/task-5/account.html
@@ -70,7 +70,11 @@
                 <label for="inputState" class="form-label">State</label>
                 <select id="inputState" class="form-select rounded-pill">
                     <option selected>Choose...</option>
-                    <option>...</option>
+                    <option>Andhra Pradaesh</option>
+                    <option>Bangalore</option>
+                    <option>Hyderbad</option>
+                    <option>Chenni</option>
+                    <option>Mumbai</option>
                 </select>
                 </div>
                 <div class="col-md-2">
