--- a/task-5/category.html
+++ b/task-5/category.html
@@ -238,7 +238,7 @@
         </div>
          
         <!-- footer start -->
-        <footer class="bg-light text-secondry text-center text-md-start border-top border-3 border-success">
+        <footer class="bg-dark text-light text-center text-md-start">
           <div class="container p-4">
               <div class="row">
                   <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
@@ -254,19 +254,19 @@
                       <h5 class="text-uppercase mb-2">About</h5>
                       <ul class="list-unstyled">
                           <li>
-                          <p class="text-dark">Company</p>
+                          <p class="text-white">Company</p>
                           </li>
                           <li>
-                          <p class="text-dark">Corporate News</p>
+                          <p class="text-white">Corporate News</p>
                           </li>
                           <li>
-                          <p class="text-dark">Press Center</p>
+                          <p class="text-white">Press Center</p>
                           </li>
                           <li>
-                          <p class="text-dark">Careers</p>
+                          <p class="text-white">Careers</p>
                           </li>
                           <li>
-                          <p class="text-dark">Sky bags</p>
+                          <p class="text-white">Sky bags</p>
                           </li>
                       </ul>
                   </div>
@@ -276,7 +276,7 @@
                       <h5 class="">Contact Us In</h5>
                       <ul class="list-unstyled mb-0">
                           <a href=""><i class="fa fa-facebook-official me-2 fs-2"></i></a>
-                          <a href=""> <i class="fa fa-amazon me-2 fs-2 text-dark"></i></a>
+                          <a href=""> <i class="fa fa-amazon me-2 fs-2 text-white"></i></a>
                           <a href=""><i class="fa fa-instagram me-2 fs-2 text-danger"></i></a> 
                           <a href=""><i class="fa fa-twitter fs-2"></i></a> 
                           
@@ -284,7 +284,7 @@
                   </div>
               </div>
           </div>
-          <div class="text-center p-3 bg-secondary text-info" >
+          <div class="text-center p-3 bg-dark text-info" >
             © 2023 Copyright:
             <a class="text-white" href="https://mdbootstrap.com/">Skybags@gmail.com</a>
           </div>
